--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "n",
-    "slug": "n",
+    "name": "Aylay",
+    "slug": "Aylay",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "n",
+    "scheme": "Aylay",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
