--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@expo/config-plugins": "~10.1.1",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-vector-icons/ionicons": "^12.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -28,6 +28,7 @@
     "AsyncStorage": "^0.1.5",
     "expo": "53.0.20",
     "expo-blur": "~14.1.5",
+    "expo-checkbox": "^4.1.4",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
