--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "expo-blur": "~14.1.5",
     "expo-checkbox": "^4.1.4",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
+    "expo-maps": "~0.11.0",
     "expo-notifications": "^0.31.4",
     "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.10",
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/babel__generator": "^7.27.0",
     "@types/react": "~19.0.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.25.0",
