--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-location": "~18.1.6"
+    "expo-location": "~18.1.6",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
