--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@react-navigation/native": "^7.1.6",
     "AsyncStorage": "^0.1.5",
     "axios": "^1.11.0",
-    "expo": "^53.0.20",
+    "expo": "53.0.22",
     "expo-blur": "~14.1.5",
     "expo-checkbox": "^4.1.4",
     "expo-constants": "~17.1.6",
@@ -38,11 +38,11 @@
     "expo-location": "~18.1.6",
     "expo-maps": "~0.11.0",
     "expo-notifications": "^0.31.4",
-    "expo-router": "~5.1.4",
+    "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
